// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes false to Modal when not visible 1`] = `
<Connect(StyledModal)
  isVisible={false}
  setVisibility={[Function]}
>
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="Please Choose Workflow"
  />
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="FOR MOBILE"
    textStyle="headerText"
  />
  <View>
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Mobile 1"
    />
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Mobile 2"
    />
  </View>
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="OTHER WORKFLOWS"
    textStyle="headerText"
  />
  <View>
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Non 1"
    />
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Non 2"
    />
  </View>
  <Button
    additionalStyles={
      Array [
        undefined,
      ]
    }
    buttonStyle="navyButton"
    disabled={false}
    handlePress={[Function]}
    text="Cancel"
  />
</Connect(StyledModal)>
`;

exports[`renders correctly when visible 1`] = `
<Connect(StyledModal)
  isVisible={true}
  setVisibility={[Function]}
>
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="Please Choose Workflow"
  />
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="FOR MOBILE"
    textStyle="headerText"
  />
  <View>
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Mobile 1"
    />
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Mobile 2"
    />
  </View>
  <StyledText
    additionalStyles={
      Array [
        undefined,
      ]
    }
    text="OTHER WORKFLOWS"
    textStyle="headerText"
  />
  <View>
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Non 1"
    />
    <Button
      additionalStyles={
        Array [
          undefined,
        ]
      }
      additionalTextStyles={
        Array [
          undefined,
        ]
      }
      disabled={false}
      handlePress={[Function]}
      text="Non 2"
    />
  </View>
  <Button
    additionalStyles={
      Array [
        undefined,
      ]
    }
    buttonStyle="navyButton"
    disabled={false}
    handlePress={[Function]}
    text="Cancel"
  />
</Connect(StyledModal)>
`;
